k8s/ingress-nginx/ingress-nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: tiktok
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 50M
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.kubernetes-devops.cn # 当不写host时可以通过服务器+内网穿透技术访问。
      http:
        paths:
          - pathType: Exact
            path: "/douyin/user/login/"
            backend:
              service:
                name: auths-api
                port:
                  number: 8888
          - pathType: Exact
            path: "/douyin/user/register/"
            backend:
              service:
                name: auths-api
                port:
                  number: 8888
